[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI/Floating_Score.gd" type="Script" id=2]
[ext_resource path="res://Assets/score.wav" type="AudioStream" id=3]
[ext_resource path="res://UI/Banked_Score.gd" type="Script" id=4]
[ext_resource path="res://UI/HUD.tres" type="Theme" id=5]

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -29.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Banked_Score" type="Label" parent="."]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "Score: "
valign = 1
script = ExtResource( 4 )

[node name="Floating_Score" type="Label" parent="."]
margin_left = 180.0
margin_right = 240.0
margin_bottom = 60.0
theme = ExtResource( 5 )
align = 2
valign = 1
script = ExtResource( 2 )

[node name="Score_Sound" type="AudioStreamPlayer" parent="Floating_Score"]
stream = ExtResource( 3 )
volume_db = -20.0

[node name="Tween" type="Tween" parent="Floating_Score"]

[node name="Time" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_right = -20.0
margin_bottom = 60.0
theme = ExtResource( 5 )
text = "Time: "
align = 2
valign = 1

[node name="Indicator_Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
